@@ -2,13 +2,14 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1441 2010-09-29 05:58:42 martin Exp $
+# $Id: CHANGES,v 1.1442 2010-09-29 10:09:30 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 # --
 3.0.0 beta5 2010-??-??
+ - 2010-09-29 Fixed bug#6032 - Customer History context settings not working.
  - 2010-09-28 Fixed bug#5909 - Add link list of predefined answers.
  - 2010-09-28 Fixed bug#6021 - Ticket Types are still displayed if they're invalid.
  - 2010-09-28 Fixed bug#4732 - Mysql table index not used when LOWER()
